# NNPracMemeCoins

./: $TRUMP_posts.json  .env  LLMpredictorV2.ipynb  NotesforLLMpredictor.ipynb  PredictTrumpCoin.ipynb  README.md  best_model.pkl  hello.py  hiddencoinpredictor.ipynb  intermediate_pydantic.pkl  intermediate_sentiment.pkl  meme_coin_model.pkl  post_embeddings.pkl  price_cache_official-trump.json  pyproject.toml  test_pydantic_output.pkl  test_reddit_embeddings.pkl  test_sentiment_scores.pkl  train_pydantic_output.pkl  train_sentiment_scores.pkl  training_history.pkl
