[project]
name = "finalcoinenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.2.6",
    "ollama>=0.5.1",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "praw>=7.8.1",
    "pycoingecko>=3.2.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
